--- a/style.css
+++ b/style.css
@@ -236,7 +236,13 @@ section .title span::after{
   border-radius: 12px;
 }
 .about-details .right{
-  width: 55%;
+  width: 45%;
+}
+.about .right img{
+  height: 400px;
+  width: 400px;
+  object-fit: cover;
+  border-radius: 12px;
 }
 section  .topic{
   color: #363F33;
